--- a/hs.html
+++ b/hs.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=0"; name="viewport" />
 <meta content="telephone=no" name="format-detection" />
-<title>swiper.js手机触屏滑动选项卡标签切换代码</title>
+<title>听花-倾听爱花人士的声音</title>
 
 <link rel="stylesheet" href="js/swiper.min.css" />
 <link rel="stylesheet" type="text/css" href="css/iconfont.css">
